--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,11 +1,19 @@
-# Titulo
+# Primeros Pasos
 
-Below is an example of markdown in JSX.
+Los chatbots son una herramienta poderosa para que las empresas y
+organizaciones comuniquen de forma personalizada y automatizada con sus clientes.
 
-```js
-const a = hola
+Está documentación te ayudará a instalar tu bot de whatsapp en simples pasos con el proposito de
+que tengas un chatbot funcional en solo minutos.
+
+---
+
+### Ejecutar
+
+Es muy sencillo solo deberas ejecutar el siguiente comando 🚀
+
+```shell
+npm create bot-whatsapp@latest
 ```
 
-<div style={{ padding: '1rem', backgroundColor: 'violet' }}>
-    Try and change the background color to `tomato`.
-</div>
+![](https://camo.githubusercontent.com/97cd563fb448c72cc50dd60d71e85d269e5b1c738473d56fee6e023e1e0723bb/68747470733a2f2f692e67697068792e636f6d2f6d656469612f6e744d74365476616c70737454497837416b2f67697068792e77656270)
