docs(bot): :zap: updated doc

--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,3 +1,5 @@
+import Collaborators from '../../components/widgets/Collaborators'
+
 # Primeros Pasos
 
 Los chatbots son una herramienta poderosa para que las empresas y
@@ -5,8 +7,6 @@ organizaciones comuniquen de forma personalizada y automatizada con sus clientes
 
 Está documentación te ayudará a instalar tu bot de whatsapp en simples pasos con el proposito de
 que tengas un chatbot funcional en solo minutos.
-
----
 
 ### Ejecutar
 
@@ -16,4 +16,12 @@ Es muy sencillo solo deberas ejecutar el siguiente comando 🚀
 npm create bot-whatsapp@latest
 ```
 
-![](https://camo.githubusercontent.com/97cd563fb448c72cc50dd60d71e85d269e5b1c738473d56fee6e023e1e0723bb/68747470733a2f2f692e67697068792e636f6d2f6d656469612f6e744d74365476616c70737454497837416b2f67697068792e77656270)
+<div class="my-4 w-full">
+    <img
+        class="w-full"
+        src="https://camo.githubusercontent.com/97cd563fb448c72cc50dd60d71e85d269e5b1c738473d56fee6e023e1e0723bb/68747470733a2f2f692e67697068792e636f6d2f6d656469612f6e744d74365476616c70737454497837416b2f67697068792e77656270"
+        alt=""
+    />
+</div>
+
+<Collaborators />
