docs: cambios en el formato del texto
cambios en el formato del texto

--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -26,7 +26,7 @@ Node.js compatible v18.12.0
 ? Quieres crear un bot? (Y/n) »
 ```
 
-A continuación te va pedir que selecciones el proveedor que quieres usar, puedes seleccionarlo moviendote sobre las opciones con las flechas arriba y abajo, y cuando estes sobre el que quieres, presiona la tecla de `espacio` y después la tecla `Enter`.
+A continuación te va pedir que selecciones el proveedor que quieres usar, puedes seleccionarlo moviendote sobre las opciones con las flechas arriba y abajo, y cuando estes sobre el que quieres, presiona la tecla de `Espacio` y después la tecla `Enter`.
 
 ```shell
 ? ¿Cuál proveedor de whatsapp quieres utilizar? » Espacio para seleccionar ↑/↓
@@ -49,9 +49,9 @@ Continuamos con la selección de la base de datos que vamos a usar para guardar 
 
 Terminamos con la selección de preveedor y base de datos, y continuamos con la instalación:
 
-Hay que cambiarnos de directorio al que se acaba de crear, dependiendo de lo que seleccionamos previamente, en este caso es **base-baileys-memory**.
-Una vez que nos cambiamos de directorio ejecutamos el comando **npm install**.
-Y cuando termine la instalación ejecutamos **npm start**.
+Hay que cambiarnos de directorio al que se acaba de crear, dependiendo de lo que seleccionamos previamente, en este caso es `base-baileys-memory`.
+Una vez que nos cambiamos de directorio ejecutamos el comando `npm install`.
+Y cuando termine la instalación ejecutamos `npm start`.
 
 ```shell
 √ ¿Cuál base de datos quieres utilizar? » Memory
