docs: :sparkles: added video

--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,6 +1,6 @@
 import Collaborators from '../../components/widgets/Collaborators'
 
-# Primeros Pasos
+# Vista rápida
 
 Los chatbots son una herramienta poderosa para que las empresas y
 organizaciones comuniquen de forma personalizada y automatizada con sus clientes.
@@ -8,7 +8,7 @@ organizaciones comuniquen de forma personalizada y automatizada con sus clientes
 Está documentación te ayudará a instalar tu bot de whatsapp en simples pasos con el proposito de
 que tengas un chatbot funcional en solo minutos.
 
-### Ejecutar
+## Ejecutar
 
 Es muy sencillo solo deberas ejecutar el siguiente comando 🚀
 
@@ -16,12 +16,21 @@ Es muy sencillo solo deberas ejecutar el siguiente comando 🚀
 npm create bot-whatsapp@latest
 ```
 
-<div class="my-4 w-full">
-    <img
-        class="w-full"
-        src="https://camo.githubusercontent.com/97cd563fb448c72cc50dd60d71e85d269e5b1c738473d56fee6e023e1e0723bb/68747470733a2f2f692e67697068792e636f6d2f6d656469612f6e744d74365476616c70737454497837416b2f67697068792e77656270"
-        alt=""
-    />
+<div class="my-4 w-full ">
+    <video
+        class="rounded drop-shadow-xl rounded  "
+        width="100%"
+        height="100%"
+        autoplay
+        loop
+        muted
+        playsinline
+    >
+        <source
+            src="https://leifer-landing-page.s3.us-east-2.amazonaws.com/console.webm"
+            type="video/webm"
+        />
+    </video>
 </div>
 
-<Collaborators />
+Recuerda que debes de cumplir con los [requisitos minimos](/docs/install) del sistema
