docs: :sparkles: updated docs

--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -2,15 +2,14 @@ import Collaborators from '../../components/widgets/Collaborators'
 
 # Vista rápida
 
-Los chatbots son una herramienta poderosa para que las empresas y
-organizaciones comuniquen de forma personalizada y automatizada con sus clientes.
+Si eres una persona con **poco tiempo y gran capacidad** de comprensión con conocimientos ejecutando proyectos en Node.js y manejo de terminal.
 
 Está documentación te ayudará a instalar tu bot de whatsapp en simples pasos con el proposito de
-que tengas un chatbot funcional en solo minutos.
+que tengas un chatbot funcional en **solo minutos.**
 
 ## Ejecutar
 
-Es muy sencillo solo deberas ejecutar el siguiente comando 🚀
+Solo debes de ubicarte en un directorio de tu preferencia, ejecutar el siguiente comando y **seguir las instrucciones**
 
 ```shell
 npm create bot-whatsapp@latest
@@ -33,4 +32,5 @@ npm create bot-whatsapp@latest
     </video>
 </div>
 
+**¿Algun error?**
 Recuerda que debes de cumplir con los [requisitos minimos](/docs/install) del sistema
