--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,11 +1,8 @@
-import Collaborators from '../../components/widgets/Collaborators'
-
 # Vista rápida
 
-Si eres una persona con **poco tiempo y gran capacidad** de comprensión con conocimientos ejecutando proyectos en Node.js y manejo de terminal.
+Si eres una persona con **poco tiempo y gran capacidad** de comprensión con conocimientos, ejecutando proyectos en Node.js y manejo de terminal.
 
-Está documentación te ayudará a instalar tu bot de whatsapp en simples pasos con el proposito de
-que tengas un chatbot funcional en **solo minutos.**
+Esta documentación te ayudará a instalar tu bot de WhatsApp en simples pasos con el propósito de que tengas un chatbot funcional **en solo minutos.**
 
 ## Ejecutar
 
