docs(web): update

--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -1,6 +1,6 @@
 # Instalación
 
-A continuacion se describen los puntos técnicos que debes de tener en cuenta antes de trabajar con esta herramienta.
+A continuación se describen los puntos técnicos que debes de tener en cuenta antes de trabajar con esta herramienta
 
 ## Requerimientos
 
@@ -8,7 +8,7 @@ A continuacion se describen los puntos técnicos que debes de tener en cuenta an
 
 ## ¿Como saber que tengo el Node?
 
-Solo debes ejecutar el siguiente comando y esperar que la version que te arroja sea superior a v16
+Solo debes ejecutar el siguiente comando y esperar que la versión que te arroja sea superior a v16
 
 ```shell
 $ node -v
@@ -17,11 +17,11 @@ v18.12.1
 
 ## Opcionales
 
-Dependiendo de las opciones de configuraciones que haz marcado al momento de crear el bot **Command Line Interface (CLI)** puede que necesites instalar más cosas.
+Dependiendo de las opciones de configuraciones que has marcado al momento de crear el bot **Command Line Interface (CLI)** puede que necesites instalar más cosas.
 
-**Ejemplo**: Si elegiste _(MySQL)_ como proveedor de base de datos logicamente necesitaras tener un entorno de MySQL.
+**Ejemplo**: Si elegiste _(MySQL)_ como proveedor de base de datos, lógicamente necesitaras tener un entorno de MySQL.
 
-📄 Pronto se agregara más informacion y videos explicando esto a fondo.
+📄 Pronto se agregará más información y videos explicando esto a fondo.
 
 <div class="my-4 w-full ">
     <video
