--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,21 +1,32 @@
-# Vista rápida
+import Alert from '../../components/widgets/Alert'
+
+# Introducción
+
+<Alert>
+    **Atención** estás leyendo la documentación de la **versión estable
+    (0.2.x)** de esta librería, si vienes de la versión anterior te recomendamos
+    pasarte por la sección de **[migración](/docs/migration/)** para que puedas
+    disfrutar de las nuevas características.
+</Alert>
+
+## ¿Que es esto?
+
+Esto es una librería que te permitirá **crear chatbot para WhatsApp** en tan solo minutos de una manera ágil y rápida. A lo largo de esta documentación encontrarás ejemplos y material de ayuda.
 
 Si eres una persona con **poco tiempo y gran capacidad** de comprensión con conocimientos, ejecutando proyectos en Node.js y manejo de terminal.
-
 Esta documentación te ayudará a instalar tu bot de WhatsApp en simples pasos con el propósito de que tengas un chatbot funcional **en solo minutos.**
 
-## Ejecutar
+---
 
-Solo debes de ubicarte en un directorio de tu preferencia, ejecutar el siguiente comando y **seguir las instrucciones**
+Ejecutar el siguiente comando y **seguir las instrucciones**
 
 ```shell
 npm create bot-whatsapp@latest
 ```
 
-<div class="my-4 w-full ">
+<div class="my-4  ">
     <video
-        class="rounded drop-shadow-xl rounded  "
-        width="100%"
+        class="rounded drop-shadow-xl w-full max-w-lg rounded  "
         height="100%"
         autoplay
         loop
