--- a/packages/docs/src/routes/docs/essential/index.mdx
+++ b/packages/docs/src/routes/docs/essential/index.mdx
@@ -1,6 +1,14 @@
+import Alert from '../../../components/widgets/Alert'
+
 # Conceptos
 
-Durante el desarrollo de este sistema se elaboraron tres (3) conceptos principales que conformar el funcionamiento
+El desarrollo de la librería se base en tres (3) piezas claves para su correcto funcionamiento:
+
+-   **Flow:** Encargado de construir todo el contexto de la conversación, finalmente su objetivo es brindar una capa amigable al desarrollador.
+-   **Provider:** Como si de un [conector](https://www.dignited.com/wp-content/uploads/2019/06/Plug-type-768x432.jpg) se tratara el objetivo es poder cambiar facilmente de proveedor de Whatsapp en minutos
+    sin el riesgo de dañar otras partes del bot
+-   **Database:** Siguiendo la linea de pensamiento de conectores, de igual manera que el provider nos brinda la capacidad de poder cambiar de capa de persistencia de datos (guardar datos) sin invertir tiempo en
+    reescribir nuestro flujo.
 
 ---
 
@@ -29,6 +37,14 @@ const flowPrincipal = addKeyword(['hola', 'alo'])
 
 ## Provider (Proveedor)
 
+<Alert>
+    ⚡ Dependiendo del tipo de proveedor que utlices puede que necesites pasar
+    algunas configuracion adicional como **token, api, etc.** para esos casos te
+    recomendamos guiarte de los
+    **[starters](https://github.com/codigoencasa/bot-whatsapp/tree/dev/starters/apps)**
+    o si gustas puedes editar esta documentación para ir agregando más info
+</Alert>
+
 Es la pieza que conectara tu flujo con Whatsapp. En este chatbot tenemos varios proveedores disponibles la mayoria gratis pero tambien tenemos integracion la api oficial de whatsapp o twilio
 
 ```js
@@ -39,26 +55,45 @@ const adapterProvider = createProvider(WhatsappProvider)
 
 Los proveedores disponibles hasta el momento son los siguientes:
 
-### [whatsapp-web.js](https://github.com/pedroslopez/whatsapp-web.js)
+[whatsapp-web.js](https://github.com/pedroslopez/whatsapp-web.js) `require('@bot-whatsapp/provider/web-whatsapp')`
 
-**require('@bot-whatsapp/provider/web-whatsapp')**
+[Venom](https://github.com/orkestral/venom) `require('@bot-whatsapp/provider/venom')`
 
-### [Venom](https://github.com/orkestral/venom)
+[Baileys](https://github.com/adiwajshing/Baileys) `require('@bot-whatsapp/provider/baileys')`
 
-**require('@bot-whatsapp/provider/venom')**
+[Meta Official](https://developers.facebook.com/docs/whatsapp/cloud-api/reference/messages) `require('@bot-whatsapp/provider/meta')`
 
-### [Baileys](https://github.com/adiwajshing/Baileys)
-
-**require('@bot-whatsapp/provider/baileys')**
-
-### [Meta Official](https://developers.facebook.com/docs/whatsapp/cloud-api/reference/messages)
-
-**require('@bot-whatsapp/provider/meta')**
-
-### [Twilio Official](https://www.twilio.com/es-mx/messaging/whatsapp)
-
-**require('@bot-whatsapp/provider/twilio')**
+[Twilio Official](https://www.twilio.com/es-mx/messaging/whatsapp) `require('@bot-whatsapp/provider/twilio')`
 
 ---
 
 ## DataBase (Base de datos)
+
+<Alert>
+    ⚡ Dependiendo del tipo de conector que utlices puede que necesites pasar
+    algunas configuracion adicional como **user, host, password** para esos
+    casos te recomendamos guiarte de los
+    **[starters](https://github.com/codigoencasa/bot-whatsapp/tree/dev/starters/apps)**
+    o si gustas puedes editar esta documentación para ir agregando más info
+</Alert>
+
+Es la pieza encargada de mantener el **"estado"** de una conversación, para mayor facilidad la libreria te proporcia diferentes conectores que se de adapten mejor a tu desarrollo
+
+```js
+const MongoAdapter = require('@bot-whatsapp/database/mongo')
+....
+const adapterDB = new MongoAdapter({
+    dbUri: 'mongodb://0.0.0.0:27017',
+    dbName: 'db_bot',
+})
+```
+
+Los conectores disponibles hasta el momento son los siguientes:
+
+`require('@bot-whatsapp/database/mock')`
+
+`require('@bot-whatsapp/database/mongo')`
+
+`require('@bot-whatsapp/database/mysql')`
+
+`require('@bot-whatsapp/database/json')`
