docs(bot): :fire: style pre

--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -26,7 +26,7 @@ npm create bot-whatsapp@latest
 
 <div class="my-4  ">
     <video
-        class="rounded drop-shadow-xl w-full max-w-lg rounded  "
+        class="rounded drop-shadow-xl w-full md:w-full max-w-screen-md"
         height="100%"
         autoplay
         loop
