--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -9,12 +9,12 @@ import Alert from '../../components/widgets/Alert'
     disfrutar de las nuevas características.
 </Alert>
 
-## ¿Que es esto?
+## ¿Què es esto?
 
 **@bot-whatsapp** es una librería que te permitirá **crear chatbot para WhatsApp** en tan solo minutos de una manera ágil y rápida. A lo largo de esta documentación encontrarás ejemplos y material de ayuda.
 
-Si eres una persona con **poco tiempo y gran capacidad** de comprensión con conocimientos, ejecutando proyectos en Node.js y manejo de terminal.
-Esta documentación te ayudará a instalar tu bot de WhatsApp en simples pasos con el propósito de que tengas un chatbot funcional **en solo minutos.**
+Si eres una persona con **poco tiempo y gran capacidad** de comprensión, con conocimientos ejecutando proyectos en Node.js y manejo de terminal.
+Esta documentación te ayudará a instalar tu bot de WhatsApp en simples pasos; con el propósito de que tengas un chatbot funcional **en solo minutos.**
 
 ---
 
@@ -40,5 +40,5 @@ npm create bot-whatsapp@latest
     </video>
 </div>
 
-**¿Algun error?**
+**¿Algún error?**
 Recuerda que debes de cumplir con los [requisitos minimos](/docs/install) del sistema
