add info install node

--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -6,6 +6,11 @@ A continuación se describen los puntos técnicos que debes de tener en cuenta a
 
 -   Node v16 o superior **[descargar node](https://nodejs.org/es/download/)**
 
+## ¿Como instalar Node en Windows?
+https://youtu.be/xRXHQlqA3Ak?t=376
+
+## ¿Como instalar Node en Ubuntu?
+Te comparto un recurso de **[Digital Ocean](https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-20-04-es)** donde explica como instalar node en Ubuntu.
 ## ¿Como saber que tengo el Node?
 
 Solo debes ejecutar el siguiente comando y esperar que la versión que te arroja sea superior a v16
