--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,15 +1,16 @@
 import Alert from '../../components/widgets/Alert'
+import Navigation from '../../components/widgets/Navigation'
 
 # Introducción
 
 <Alert>
-    **Atención** estás leyendo la documentación de la **versión estable
-    (0.2.x)** de esta librería, si vienes de la versión anterior te recomendamos
-    pasarte por la sección de **[migración](/docs/migration/)** para que puedas
-    disfrutar de las nuevas características.
+    **Atención** estás leyendo la documentación de la **versión v2** de esta
+    librería, si vienes de la versión anterior te recomendamos pasarte por la
+    sección de **[migración](/docs/migration/)** para que puedas disfrutar de
+    las nuevas características.
 </Alert>
 
-## ¿Què es esto?
+## ¿Qué es esto?
 
 **@bot-whatsapp** es una librería que te permitirá **crear chatbot para WhatsApp** en tan solo minutos de una manera ágil y rápida. A lo largo de esta documentación encontrarás ejemplos y material de ayuda.
 
@@ -41,4 +42,13 @@ npm create bot-whatsapp@latest
 </div>
 
 **¿Algún error?**
-Recuerda que debes de cumplir con los [requisitos minimos](/docs/install) del sistema
+Recuerda que debes de cumplir con los [requisitos minimos](/docs/requirements) del sistema
+
+---
+
+<Navigation
+    pages={[
+        { name: 'Home', link: '/' },
+        { name: 'Requerimientos', link: '/docs/requirements' },
+    ]}
+/>
