--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -1,40 +1,27 @@
+import Alert from '../../../components/widgets/Alert'
+import Navigation from '../../../components/widgets/Navigation'
+
 # Instalación
 
-A continuación se describen los puntos técnicos que debes de tener en cuenta antes de trabajar con esta herramienta
+**Con esta librería, puedes construir flujos automatizados de conversación de manera agnóstica al proveedor de WhatsApp,** configurar respuestas automatizadas para preguntas frecuentes, recibir y responder mensajes de manera automatizada, y hacer un seguimiento de las interacciones con los clientes. Además, puedes configurar fácilmente disparadores que te ayudaran a expandir las funcionalidades sin límites.
 
-## Requerimientos
+---
 
--   Node v16 o superior **[descargar node](https://nodejs.org/es/download/)**
+### Comenzamos
 
-## ¿Como instalar Node en Windows?
-
-https://youtu.be/xRXHQlqA3Ak?t=376
-
-## ¿Como instalar Node en Ubuntu?
-
-Te comparto un recurso de **[Digital Ocean](https://www.digitalocean.com/community/tutorials/how-to-install-node-js-on-ubuntu-20-04-es)** donde explica como instalar node en Ubuntu.
-
-## ¿Como saber que tengo el Node?
-
-Solo debes ejecutar el siguiente comando y esperar que la versión que te arroja sea superior a v16
+Crear un bot es tan sencillo como ejecutar el siguiente comando y seguir las instrucciones
 
 ```shell
-$ node -v
-v18.12.1
+npm create bot-whatsapp@latest
 ```
 
-## Opcionales
+_Para seleccionar usa la tecla de **espacio** y para confirmar la tecla **enter**_
 
-Dependiendo de las opciones de configuraciones que has marcado al momento de crear el bot **Command Line Interface (CLI)** puede que necesites instalar más cosas.
+El **CLI** te hace una revisión previa, de versión de Node y sistema operativo, con la finalidad de informarte si cumples los requisitos o mostrarte información de interés.
 
-**Ejemplo**: Si elegiste _(MySQL)_ como proveedor de base de datos, lógicamente necesitaras tener un entorno de MySQL.
-
-📄 Pronto se agregará más información y videos explicando esto a fondo.
-
-<div class="my-4 w-full ">
+<div class="my-4  ">
     <video
-        class="rounded drop-shadow-xl rounded  "
-        width="100%"
+        class="rounded drop-shadow-xl w-full md:w-full max-w-screen-md"
         height="100%"
         autoplay
         loop
@@ -47,3 +34,37 @@ Dependiendo de las opciones de configuraciones que has marcado al momento de cre
         />
     </video>
 </div>
+
+### Plantilla
+
+Luego de seleccionar las opciones de tu preferencia se creara una carpeta con una plantilla de un flujo de un bot listo para ejecutar y que puedes modificar a tu gusto.
+**[Ver más plantillas](https://github.com/codigoencasa/bot-whatsapp/tree/dev/starters/apps)**
+
+Cada plantilla tiene sus dependencias necesarias basadas en tu previa selección. **Ejemplo**, si seleccionas el proveedor de MySQL, la plantilla incorpora lo necesario para que tu conexión con la base de datos sea exitosa.
+
+```json
+    "dependencies": {
+        "@bot-whatsapp/bot": "latest",
+        "@bot-whatsapp/cli": "latest",
+        "@bot-whatsapp/database": "latest",
+        "@bot-whatsapp/provider": "latest",
+        "@adiwajshing/baileys": "4.4.0",
+        "mysql2": "^2.3.3", 👈
+    },
+```
+
+<Alert>
+    📄 Si deseas cambiar tu **proveedor o tu motor** de base de datos no es
+    necesario volver ejecutar el CLI (lo puedes hacer sin problema) aunque
+    tambien basta con solo modificar un par de lineas. [Ver
+    explicación](/docs/essential)
+</Alert>
+
+---
+
+<Navigation
+    pages={[
+        { name: 'Requerimientos', link: '/docs/requirements' },
+        { name: 'Pruebalo', link: '/docs/example' },
+    ]}
+/>
