docs: :memo: add more documentation about twilio

--- a/packages/docs/src/routes/docs/providers/index.mdx
+++ b/packages/docs/src/routes/docs/providers/index.mdx
@@ -1,7 +1,7 @@
 import Alert from '../../../components/widgets/Alert'
 import Navigation from '../../../components/widgets/Navigation'
 
-# Provider (Proveedor)
+# Proveedores
 
 <Alert>
     ⚡ Dependiendo del tipo de proveedor que utlices puede que necesites pasar
@@ -30,6 +30,12 @@ Los proveedores disponibles hasta el momento son los siguientes:
 [Meta Official](https://developers.facebook.com/docs/whatsapp/cloud-api/reference/messages) `require('@bot-whatsapp/provider/meta')`
 
 [Twilio Official](https://www.twilio.com/es-mx/messaging/whatsapp) `require('@bot-whatsapp/provider/twilio')`
+
+---
+
+### Twilio: Configuración
+
+Estamos trabajando en el apartado de la documentación lo más claro posible. Puedes encontrar los [detalles aquí](/docs/providers/twilio)
 
 ---
 
