docs: :memo: add more documentation about twilio

--- a/packages/docs/src/routes/docs/providers/index.mdx
+++ b/packages/docs/src/routes/docs/providers/index.mdx
@@ -41,7 +41,7 @@ Estamos trabajando en el apartado de la documentación lo más claro posible. Pu
 
 <Navigation
     pages={[
-        { name: 'Conversaciones', link: '/docs/flows' },
+        { name: 'Conversaciones', link: '/docs/providers' },
         { name: 'Base de datos', link: '/docs/database' },
     ]}
 />
