--- a/packages/docs/src/routes/docs/providers/twilio/index.mdx
+++ b/packages/docs/src/routes/docs/providers/twilio/index.mdx
@@ -146,7 +146,7 @@ Si ya tienes desplegado tu bot en un servidor tienes que obtener la IP publica o
 
 <Navigation
     pages={[
-        { name: 'Conversaciones', link: '/docs/flows' },
-        { name: 'Base de datos', link: '/docs/database' },
+        { name: 'Proveedores', link: '/docs/providers' },
+        { name: 'Meta', link: '/docs/providers/meta' },
     ]}
 />
