--- a/packages/docs/src/routes/docs/flows/index.mdx
+++ b/packages/docs/src/routes/docs/flows/index.mdx
@@ -226,6 +226,7 @@ async (ctx,{flowDynamic, endFlow})=>{
 Argumento para asignar nombre y puerto al BOT
 
 ```js
+const BOTNAME = 'bot';
 QRPortalWeb({name:BOTNAME, port:3005 });
 
 ```
