--- a/packages/docs/src/routes/docs/providers/index.mdx
+++ b/packages/docs/src/routes/docs/providers/index.mdx
@@ -22,6 +22,8 @@ Los proveedores disponibles hasta el momento son los siguientes:
 
 [whatsapp-web.js](https://github.com/pedroslopez/whatsapp-web.js) `require('@bot-whatsapp/provider/web-whatsapp')`
 
+[WPPConnect](https://github.com/wppconnect-team/wppconnect) `require('@bot-whatsapp/provider/wppconnect')`
+
 [Venom](https://github.com/orkestral/venom) `require('@bot-whatsapp/provider/venom')`
 
 [Baileys](https://github.com/adiwajshing/Baileys) `require('@bot-whatsapp/provider/baileys')`
