cambio de adiwajshing/baileys a  whiskeysockets/baileys

--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -45,7 +45,7 @@ Cada plantilla tiene sus dependencias necesarias basadas en tu previa selección
         "@bot-whatsapp/cli": "latest",
         "@bot-whatsapp/database": "latest",
         "@bot-whatsapp/provider": "latest",
-        "@adiwajshing/baileys": "4.4.0",
+        "@adiwajshing/baileys": "github:WhiskeySockets/Baileys",
         "mysql2": "^2.3.3", 👈
     },
 ```
