--- a/packages/docs/src/routes/docs/index.mdx
+++ b/packages/docs/src/routes/docs/index.mdx
@@ -1,20 +1,11 @@
 import Alert from '../../components/widgets/Alert'
 import Navigation from '../../components/widgets/Navigation'
 
-# Introducción
+# Vista Rápida
 
-<Alert>
-    **Atención** estás leyendo la documentación de la **versión v2** de esta librería, si vienes de la versión anterior
-    te recomendamos pasarte por la sección de **[migración](/docs/migration/)** para que puedas disfrutar de las nuevas
-    características.
-</Alert>
+**@bot-whatsapp** es una herramienta que te ayuda a crear un tipo especial de programa llamado chatbot para WhatsApp. Con esta herramienta, podrás hacer tu propio chatbot en WhatsApp en muy poco tiempo y de forma rápida. En esta guía, encontrarás ejemplos y recursos que te ayudarán.
 
-## ¿Qué es esto?
-
-**@bot-whatsapp** es una librería que te permitirá **crear chatbot para WhatsApp** en tan solo minutos de una manera ágil y rápida. A lo largo de esta documentación encontrarás ejemplos y material de ayuda.
-
-Si eres una persona con **poco tiempo y gran capacidad** de comprensión, con conocimientos ejecutando proyectos en Node.js y manejo de terminal.
-Esta documentación te ayudará a instalar tu bot de WhatsApp en simples pasos; con el propósito de que tengas un chatbot funcional **en solo minutos.**
+Si eres alguien que tiene poco tiempo pero entiende bien las cosas, y además sabes cómo trabajar con Node.js y usar la terminal, esta guía te será de mucha utilidad. Te ayudará a instalar tu chatbot de WhatsApp en unos simples pasos, para que puedas tenerlo funcionando en solo minutos.
 
 ---
 
