--- a/packages/docs/src/routes/docs/install/index.mdx
+++ b/packages/docs/src/routes/docs/install/index.mdx
@@ -3,11 +3,6 @@ import Navigation from '../../../components/widgets/Navigation'
 
 # Instalación
 
-**Con esta librería, puedes construir flujos automatizados de conversación de manera agnóstica al proveedor de WhatsApp,** configurar respuestas automatizadas para preguntas frecuentes, recibir y responder mensajes de manera automatizada, y hacer un seguimiento de las interacciones con los clientes. Además, puedes configurar fácilmente disparadores que te ayudaran a expandir las funcionalidades sin límites.
-
----
-
-### Comenzamos
 
 Crear un bot es tan sencillo como ejecutar el siguiente comando y seguir las instrucciones
 
@@ -18,6 +13,11 @@ npm create bot-whatsapp@latest
 _Para seleccionar usa la tecla de **espacio** y para confirmar la tecla **enter**_
 
 El **CLI** te hace una revisión previa, de versión de Node y sistema operativo, con la finalidad de informarte si cumples los requisitos o mostrarte información de interés.
+
+
+<Alert>
+    **¿No te funciona las flechas?** Intenta con otro terminal, powershell, cmd, gitbash
+</Alert>
 
 <div class="my-4  ">
     <video
@@ -32,9 +32,9 @@ El **CLI** te hace una revisión previa, de versión de Node y sistema operativo
     </video>
 </div>
 
-### Plantilla
+### ¿Ahora qué?
 
-Luego de seleccionar las opciones de tu preferencia se creara una carpeta con una plantilla de un flujo de un bot listo para ejecutar y que puedes modificar a tu gusto.
+Luego de seleccionar las opciones de tu preferencia se creara una carpeta con un bot listo para ejecutar y que puedes modificar a tu gusto.
 **[Ver más plantillas](https://github.com/codigoencasa/bot-whatsapp/tree/dev/starters/apps)**
 
 Cada plantilla tiene sus dependencias necesarias basadas en tu previa selección. **Ejemplo**, si seleccionas el proveedor de MySQL, la plantilla incorpora lo necesario para que tu conexión con la base de datos sea exitosa.
