Adding @bot/provider documentation: meta/twilio/baileys/venom/wppconnect/wweb

--- a/packages/docs/src/routes/docs/providers/meta/index.mdx
+++ b/packages/docs/src/routes/docs/providers/meta/index.mdx
@@ -151,7 +151,7 @@ Si ya tienes desplegado tu bot en un servidor tienes que obtener la IP publica o
 
 <Navigation
     pages={[
-        { name: 'Proveedores', link: '/docs/providers' },
-        { name: 'Meta', link: '/docs/providers/meta' },
+        { name: 'Meta', link: '/docs/provider-meta' },
+        { name: 'Twilio', link: '/docs/provider-twilio' },
     ]}
 />
