--- a/packages/docs/src/routes/docs/example/index.mdx
+++ b/packages/docs/src/routes/docs/example/index.mdx
@@ -34,7 +34,7 @@ main()
 
 ## Explicando código
 
-En esta parte solo estamos declaramos las dependencias que vamos a utilizar. Si quieres saber a fondo cada una de las funciones te recomiendo pasarte por la seccion de **[conceptos](/docs/concepts)**
+En esta parte solo estamos declarando las dependencias que vamos a utilizar. Si quieres saber a fondo cada una de las funciones te recomiendo pasarte por la seccion de **[conceptos](/docs/concepts)**
 
 ```js
 const { createBot, createProvider, createFlow, addKeyword } = require('@bot-whatsapp/bot')
@@ -43,7 +43,7 @@ const WebWhatsappProvider = require('@bot-whatsapp/provider/web-whatsapp')
 const MockAdapter = require('@bot-whatsapp/database/mock')
 ```
 
-La siguiente seccion te declaramos la palabras claves que disparan un flujo de conversación.
+La siguiente seccion te declaramos las palabras claves que disparan un flujo de conversación.
 
 **Ejemplo**:
 
