--- a/packages/docs/src/routes/docs/add-action/index.mdx
+++ b/packages/docs/src/routes/docs/add-action/index.mdx
@@ -18,6 +18,21 @@ const flowPrincipal = addKeyword(['hola', 'alo'])
     .addAnswer(['Tengo:', 'Zapatos', 'Bolsos', 'etc ...'])
 ```
 
+Tambien puedes tener un addAction con `capture`
+
+```js
+const { addKeyword } = require('@bot-whatsapp/bot')
+    const flujoPrincipal = addKeyword(['hola'])
+        .addAction(async (_, { flowDynamic }) => {
+            return flowDynamic('Buenas! ¿Cual es tu nombre?')
+        })
+        .addAction({ capture: true }, async (ctx, { flowDynamic, state }) => {
+            state.update({ name: ctx.body })
+            return flowDynamic(`Gracias por tu nombre!: ${ctx.body}`)
+        })
+        .addAnswer('Chao!')
+```
+
 ---
 
 <Navigation
